@@ -1,6 +1,7 @@
 package sunstone.azure.impl;
 
 
+import org.junit.platform.commons.util.StringUtils;
 import sunstone.azure.annotation.WithAzureArmTemplateRepeatable;
 import org.junit.jupiter.api.extension.ExtensionContext;
 import sunstone.azure.annotation.WithAzureArmTemplate;
@@ -46,12 +47,12 @@ public class AzureSunstoneDeployer extends AbstractSunstoneCloudDeployer {
         String content = null;
         try {
             content = getResourceContent(armTemplateDefinition.template());
-            String group = armTemplateDefinition.group().isBlank() ? SunstoneConfig.getString(AzureConfig.GROUP) : SunstoneConfig.resolveExpressionToString(armTemplateDefinition.group());
+            String group = StringUtils.isBlank(armTemplateDefinition.group()) ? SunstoneConfig.getString(AzureConfig.GROUP) : SunstoneConfig.resolveExpressionToString(armTemplateDefinition.group());
             if (group == null) {
                 throw new IllegalArgumentSunstoneException("Resource group for Azure ARM template is not defined. "
                         + "It must be specified either in the annotation or as Sunstone Config property.");
             }
-            String region = armTemplateDefinition.region().isBlank() ? SunstoneConfig.getString(AzureConfig.REGION) : SunstoneConfig.resolveExpressionToString(armTemplateDefinition.region());
+            String region = StringUtils.isBlank(armTemplateDefinition.region()) ? SunstoneConfig.getString(AzureConfig.REGION) : SunstoneConfig.resolveExpressionToString(armTemplateDefinition.region());
             if (region == null) {
                 throw new IllegalArgumentSunstoneException("Region for Azure ARM template is not defined. It must be specified either "
                         + "in the annotation or as Sunstone Config property.");
