@@ -1,6 +1,7 @@
 package sunstone.core;
 
 
+import org.junit.platform.commons.util.StringUtils;
 import org.slf4j.Logger;
 import org.wildfly.extras.creaper.core.ManagementClient;
 import org.wildfly.extras.creaper.core.online.ManagementProtocol;
@@ -15,9 +16,9 @@ public class CreaperUtils {
 
     public static OnlineManagementClient createStandaloneManagementClient(String hostname, StandaloneMode standaloneMode) throws IOException {
 
-        int port = standaloneMode.port().isBlank() ? SunstoneConfig.getValue(ConfigProperties.WildFly.MNGMT_PORT, Integer.class) : SunstoneConfig.resolveExpression(standaloneMode.port(), Integer.class);
-        String user = standaloneMode.user().isBlank() ? SunstoneConfig.getString(ConfigProperties.WildFly.MNGMT_USERNAME) : SunstoneConfig.resolveExpressionToString(standaloneMode.user());
-        String pass = standaloneMode.password().isBlank() ? SunstoneConfig.getString(ConfigProperties.WildFly.MNGMT_PASSWORD) : SunstoneConfig.resolveExpressionToString(standaloneMode.password());
+        int port = StringUtils.isBlank(standaloneMode.port()) ? SunstoneConfig.getValue(ConfigProperties.WildFly.MNGMT_PORT, Integer.class) : SunstoneConfig.resolveExpression(standaloneMode.port(), Integer.class);
+        String user = StringUtils.isBlank(standaloneMode.user()) ? SunstoneConfig.getString(ConfigProperties.WildFly.MNGMT_USERNAME) : SunstoneConfig.resolveExpressionToString(standaloneMode.user());
+        String pass = StringUtils.isBlank(standaloneMode.password()) ? SunstoneConfig.getString(ConfigProperties.WildFly.MNGMT_PASSWORD) : SunstoneConfig.resolveExpressionToString(standaloneMode.password());
         int timeout = (int) TimeoutUtils.adjust(SunstoneConfig.getValue(ConfigProperties.WildFly.MNGMT_CONNECTION_TIMEOUT, 120000));
         LOGGER.debug("Creating management client {}:{} using credentials {}:{} with timeout {}", hostname, port, user, pass, timeout);
         OnlineOptions.OptionalOnlineOptions clientOptions = OnlineOptions.standalone()
